Split pdfmode into pdftex and luatex
Also rename xdvidpdfmx to xetex.

--- a/l3backend/l3backend-box.dtx
+++ b/l3backend/l3backend-box.dtx
@@ -151,10 +151,10 @@
 %</dvips>
 %    \end{macrocode}
 %
-% \subsection{\texttt{pdfmode} backend}
+% \subsection{\LuaTeX{} and \pdfTeX{} backends}
 %
 %    \begin{macrocode}
-%<*pdfmode>
+%<*luatex|pdftex>
 %    \end{macrocode}
 %
 % \begin{macro}{\@@_backend_clip:N}
@@ -247,17 +247,17 @@
 % \end{macro}
 %
 %    \begin{macrocode}
-%</pdfmode>
+%</luatex|pdftex>
 %    \end{macrocode}
 %
 % \subsection{\texttt{dvipdfmx} backend}
 %
 %    \begin{macrocode}
-%<*dvipdfmx|xdvipdfmx>
+%<*dvipdfmx|xetex>
 %    \end{macrocode}
 %
 % \begin{macro}{\@@_backend_clip:N}
-%   The code here is identical to that for \texttt{pdfmode}: unlike rotation and
+%   The code here is identical to that for \LuaTeX{}/\pdfTeX{}: unlike rotation and
 %   scaling, there is no higher-level support in the backend for clipping.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_backend_clip:N #1
@@ -327,7 +327,7 @@
 % \end{macro}
 %
 %    \begin{macrocode}
-%</dvipdfmx|xdvipdfmx>
+%</dvipdfmx|xetex>
 %    \end{macrocode}
 %
 % \subsection{\texttt{dvisvgm} backend}
