--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -62,18 +62,18 @@
 %
 % Color support is split into parts: general color, separations, and color for
 % drawings. We have different approaches in each backend, and have some choices
-% to make about \texttt{(x)dvipdfmx} in particular. Whilst it is in some ways
+% to make about \texttt{dvipdfmx}/\XeTeX{} in particular. Whilst it is in some ways
 % convenient to use the same approach in multiple backends, the fact that
-% \texttt{(x)dvipdfmx} is PDF-based means it (largely) sticks closer to
+% \texttt{dvipdfmx}/\XeTeX{} is PDF-based means it (largely) sticks closer to
 % direct PDF output.
 %
-% \subsection{\texttt{(x)dvipmdfx}}
+% \subsection{\texttt{dvipmdfx}/\XeTeX{}}
 %
 %    \begin{macrocode}
-%<*dvipdfmx|xdvipdfmx>
+%<*dvipdfmx|xetex>
 %    \end{macrocode}
 %
-% This backend has the most possible approaches: it recognises both
+% These backends have the most possible approaches: it recognises both
 % \texttt{dvips}-based color specials and it's own format, plus one can
 % include PDF statements directly. The latter are not subject to the stack,
 % so are not suitable for general use. Of the two stack methods, the dedicated
@@ -81,7 +81,7 @@
 % the \texttt{dvips} one.
 %
 % The \LaTeXe{} backend code uses \texttt{dvips}-based code with
-% \texttt{(x)dvipdfmx}, and so we leave getting color from \LaTeXe{} to
+% \texttt{dvipmdfx}/\XeTeX{}, and so we leave getting color from \LaTeXe{} to
 % a shared code path below.
 %
 % \begin{macro}
@@ -109,13 +109,13 @@
 % \end{macro}
 %
 %    \begin{macrocode}
-%</dvipdfmx|xdvipdfmx>
+%</dvipdfmx|xetex>
 %    \end{macrocode}
 %
 % \subsection{\texttt{dvips}-style}
 %
 %    \begin{macrocode}
-%<*dvisvgm|dvipdfmx|dvips|xdvipdfmx>
+%<*dvisvgm|dvipdfmx|dvips|xetex>
 %    \end{macrocode}
 %
 % \begin{macro}{\@@_backend_pickup:N}
@@ -151,7 +151,7 @@
 % \end{macro}
 %
 %    \begin{macrocode}
-%</dvisvgm|dvipdfmx|dvips|xdvipdfmx>
+%</dvisvgm|dvipdfmx|dvips|xetex>
 %    \end{macrocode}
 %
 %    \begin{macrocode}
@@ -196,10 +196,10 @@
 %</dvisvgm|dvips>
 %    \end{macrocode}
 %
-% \subsection{\texttt{pdfmode}}
+% \subsection{\LuaTeX{} and \pdfTeX{}}
 %
 %    \begin{macrocode}
-%<*pdfmode>
+%<*luatex|pdftex>
 %    \end{macrocode}
 %
 % \begin{macro}{\@@_backend_pickup:N}
@@ -270,27 +270,33 @@
   { \@@_backend_select:n { #1 ~ g ~ #1 ~ G } }
 \cs_new_protected:Npn \@@_backend_select_rgb:n #1
   { \@@_backend_select:n { #1 ~ rg ~ #1 ~ RG } }
-\cs_new_protected:Npx \@@_backend_select:n #1
+\cs_new_protected:Npn \@@_backend_select:n #1
   {
-    \cs_if_exist:NTF \tex_pdfextension:D
-      { \tex_pdfextension:D colorstack }
-      { \tex_pdfcolorstack:D }
-        \exp_not:N \l__kernel_color_stack_int push {#1}
-      \group_insert_after:N \exp_not:N \@@_backend_reset:
+%<*luatex>
+    \tex_pdfextension:D colorstack
+%</luatex>
+%<*pdftex>
+    \tex_pdfcolorstack:D
+%</pdftex>
+      \l__kernel_color_stack_int push {#1}
+    \group_insert_after:N \@@_backend_reset:
   }
-\cs_new_protected:Npx \@@_backend_reset:
+\cs_new_protected:Npn \@@_backend_reset:
   {
-    \cs_if_exist:NTF \tex_pdfextension:D
-      { \tex_pdfextension:D colorstack }
-      { \tex_pdfcolorstack:D }
-        \exp_not:N \l__kernel_color_stack_int pop \scan_stop:
+%<*luatex>
+    \tex_pdfextension:D colorstack
+%</luatex>
+%<*pdftex>
+    \tex_pdfcolorstack:D
+%</pdftex>
+      \l__kernel_color_stack_int pop \scan_stop:
   }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
 %
 %    \begin{macrocode}
-%</pdfmode>
+%</luatex|pdftex>
 %    \end{macrocode}
 %
 % \subsection{Separations}
@@ -396,19 +402,19 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-%<*dvipdfmx|pdfmode|xdvipdfmx>
+%<*dvipdfmx|luatex|pdftex|xetex>
 %    \end{macrocode}
 %
 % \begin{macro}{\@@_backend_select_separation:nn}
 %   Different syntaxes here as the stacks are accessed very differently.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_backend_select_separation:nn #1#2
-%<*dvipdfmx|xdvipdfmx>
+%<*dvipdfmx|xetex>
   { \@@_backend_select:n { @#1 ~ [#2] } }
-%</dvipdfmx|xdvipdfmx>
-%<*pdfmode>
+%</dvipdfmx|xetex>
+%<*luatex|pdftex>
   { \@@_backend_select:n { /#1 ~ cs ~ /#1 ~ CS ~ #2 ~ scn ~ #2 ~ SCN } }
-%</pdfmode>
+%</luatex|pdftex>
 %    \end{macrocode}
 % \end{macro}
 %
@@ -419,7 +425,7 @@
 %   Initialising the PDF structures needs two parts: creating an object
 %   containing the \enquote{real} name of the Separation, then adding a reference
 %   to that to each page. The latter uses the internal name of the \texttt{cs}.
-%   For \texttt{(x)dvipdfmx}, the backend does most of the work so we need a
+%   For \texttt{dvipdfmx}/\XeTeX{}, the backend does most of the work so we need a
 %   simplified version.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_backend_separation_init:nnnnn #1#2#3#4#5
@@ -436,7 +442,7 @@
           /C1 ~ [#5] /N ~ 1
         >>
       }
-%<*pdfmode>
+%<*luatex|pdftex>
     \use:x
       {
         \pdfcoredict_gput:nnn
@@ -444,22 +450,22 @@
           { color \int_use:N \g_@@_separation_int }
           { \pdf_object_last: }
       }
-%</pdfmode>
+%</luatex|pdftex>
   }
 \cs_if_exist:NF \pdf_object_now:nn
   { \cs_gset_protected:Npn \@@_backend_separation_init:nnnnn #1#2#3#4#5 { } }
 \cs_new_protected:Npn \@@_backend_separation_init:n #1
   {
-%<*dvipdfmx|xdvipdfmx>
+%<*dvipdfmx|xetex>
     \__kernel_backend_literal:x
       {
         pdf:obj ~ @ color \int_use:N \g_@@_separation_int \c_space_tl
           [#1]
       }
-%</dvipdfmx|xdvipdfmx>
-%<*pdfmode>
+%</dvipdfmx|xetex>
+%<*luatex|pdftex>
     \pdf_object_now:nx { array } {#1}
-%</pdfmode>  
+%</luatex|pdftex>  
   }
 %    \end{macrocode}
 %   For CIELAB colors, we need one object per document for the illuminant,
@@ -498,17 +504,18 @@
 % \end{macro}
 %
 %    \begin{macrocode}
-%</dvipdfmx|pdfmode|xdvipdfmx>
+%</dvipdfmx|luatex|pdftex|xetex>
 %    \end{macrocode}
 %
 % \subsection{Fill and stroke color}
 %
-% Here, \texttt{(x)dvipdfmx} follows \texttt{pdfmode}, while for \texttt{dvips}
+% Here, \texttt{dvipdfmx}/\XeTeX{} follows \LuaTeX{} and \pdfTeX{},
+% while for \texttt{dvips}
 % we have to manage fill and stroke color ourselves. We also handle
 % \texttt{dvisvgm} independently, as there we can create SVG directly.
 %
 %    \begin{macrocode}
-%<*dvipdfmx|pdfmode|xdvipdfmx>
+%<*dvipdfmx|luatex|pdftex|xetex>
 %    \end{macrocode}
 %
 % \begin{macro}
@@ -520,8 +527,8 @@
 %     \@@_backend_stroke_gray:n ,
 %     \@@_backend_stroke_rgb:n
 %   }
-%   Drawing (fill/stroke) color is handled in \texttt{(x)dvipdfmx} in the
-%   same way as \texttt{pdfmode}. We use the same approach as earlier, except the
+%   Drawing (fill/stroke) color is handled in \texttt{dvipdfmx}/\XeTeX{} in the
+%   same way as \LuaTeX{}/\pdfTeX{}. We use the same approach as earlier, except the
 %   color stack is not involved so the generic direct PDF operation is used.
 %   There is no worry about the nature of strokes: everything is handled
 %   automatically.
@@ -555,7 +562,7 @@
 % \end{macro}
 %
 %    \begin{macrocode}
-%</dvipdfmx|pdfmode|xdvipdfmx>
+%</dvipdfmx|luatex|pdftex|xetex>
 %    \end{macrocode}
 %
 %    \begin{macrocode}
