--- a/l3backend/l3backend-graphics.dtx
+++ b/l3backend/l3backend-graphics.dtx
@@ -95,10 +95,10 @@
 %</dvips>
 %    \end{macrocode}
 %
-% \subsection{\texttt{pdfmode} backend}
+% \subsection{\LuaTeX{} and \pdfTeX{} backends}
 %
 %    \begin{macrocode}
-%<*pdfmode>
+%<*luatex|pdftex>
 %    \end{macrocode}
 %
 % \begin{variable}{\l_@@_graphics_attr_tl}
@@ -223,7 +223,7 @@
 % \begin{macro}{\@@_backend_include_eps:n}
 % \begin{variable}
 %   {\l_@@_backend_dir_str, \l_@@_backend_name_str, \l_@@_backend_ext_str}
-%   EPS graphics may be included in \texttt{pdfmode} by conversion to
+%   EPS graphics may be included in \LuaTeX{}/pdfTeX{} by conversion to
 %   PDF: this requires restricted shell escape. Modelled on the \pkg{epstopdf}
 %   \LaTeXe{} package, but simplified, conversion takes place here if we have
 %   shell access.
@@ -274,13 +274,13 @@
 % \end{macro}
 %
 %    \begin{macrocode}
-%</pdfmode>
+%</luatex|pdftex>
 %    \end{macrocode}
 %
 % \subsection{\texttt{dvipdfmx} backend}
 %
 %    \begin{macrocode}
-%<*dvipdfmx|xdvipdfmx>
+%<*dvipdfmx|xetex>
 %    \end{macrocode}
 %
 % \begin{macro}
@@ -326,7 +326,7 @@
 %  \begin{macro}{\@@_backend_include_auxii:nnn, \@@_backend_include_auxii:xnn}
 %  \begin{macro}{\@@_backend_include_auxiii:nnn}
 %   The special syntax depends on the file type. There is a difference in
-%   how PDF graphics are best handled between |dvipdfmx| and |xdvipdfmx|: for
+%   how PDF graphics are best handled between |dvipdfmx| and \XeTeX{}: for
 %   the latter it is better to use the primitive route. The relevant code for
 %   that is included later in this file.
 %    \begin{macrocode}
@@ -425,13 +425,13 @@
 % \end{macro}
 %
 %    \begin{macrocode}
-%</dvipdfmx|xdvipdfmx>
+%</dvipdfmx|xetex>
 %    \end{macrocode}
 %
-% \subsection{\texttt{xdvipdfmx} backend}
+% \subsection{\XeTeX{} backend}
 %
 %    \begin{macrocode}
-%<*xdvipdfmx>
+%<*xetex>
 %    \end{macrocode}
 %
 % \subsubsection{Images}
@@ -448,7 +448,7 @@
 % \begin{macro}{\@@_backend_getbb_auxiv:nnNnn, \@@_backend_getbb_auxiv:VnNnn}
 % \begin{macro}{\@@_backend_getbb_auxv:nNnn, \@@_backend_getbb_auxv:nNnn}
 % \begin{macro}[EXP]{\@@_backend_getbb_pagebox:w}
-%   For \texttt{xdvipdfmx}, there are two primitives that allow us to obtain
+%   For \XeTeX{}, there are two primitives that allow us to obtain
 %   the bounding box without needing \texttt{extractbb}. The only complexity
 %   is passing the various minor variations to a common core process. The
 %   \XeTeX{} primitive omits the text |box| from the page box specification,
@@ -536,7 +536,7 @@
 % \end{macro}
 %
 %    \begin{macrocode}
-%</xdvipdfmx>
+%</xetex>
 %    \end{macrocode}
 %
 % \subsection{\texttt{dvisvgm} backend}
