--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -924,10 +924,13 @@
 %   \item[dvips] Use the \texttt{dvips} driver.
 %   \item[dvipdfmx] Use the \texttt{dvipdfmx} driver.
 %   \item[dvisvgm] Use the \texttt{dvisvgm} driver.
-%   \item[pdfmode] Use the \texttt{pdfmode} driver (direct PDF output from
-%     \pdfTeX{} or \LuaTeX{}).
-%   \item[xdvipdfmx] Use the \texttt{xdvipdfmx} driver (\XeTeX{} only).
+%   \item[luatex] Use the direct PDF output mode of \LuaTeX{}
+%   \item[pdftex] Use the direct PDF output mode of \pdfTeX{}
+%   \item[xetex] Use the \XeTeX{} version of the \texttt{dvipdfmx} driver.
 % \end{itemize}
+% For historical reasons, there is also \texttt{pdfmode} as an equivalent of
+% \texttt{luatex} or \texttt{pdftex}, and \texttt{xdvipdfmx} as
+% an equivalent to \texttt{xetex}, but these are deprecated
 %
 % \DescribeOption{suppress-backend-headers}
 % The \texttt{suppress-backend-headers} option suppresses loading of
@@ -1369,7 +1372,7 @@
 \keys_define:nn { sys }
   {
     backend .choices:nn =
-      { dvipdfmx , dvips , dvisvgm , pdfmode , xdvipdfmx }
+      { dvipdfmx , dvips , dvisvgm , luatex , pdftex , pdfmode , xdvipdfmx , xetex }
       { \sys_load_backend:n {#1} } ,
     check-declarations .code:n =
       {
