A few notes on XeTeX backend code

--- a/l3backend/l3backend-basics.dtx
+++ b/l3backend/l3backend-basics.dtx
@@ -367,7 +367,9 @@
 % \end{macro}
 %
 % \begin{macro}{\__kernel_backend_scope_begin:, \__kernel_backend_scope_end:}
-%   Scoping is done using the backend-specific specials.
+%   Scoping is done using the backend-specific specials. We use the versions
+%   originally from \texttt{xdvidfpmx} (\texttt{x:}) as these are well-tested
+%   \enquote{in the wild}.
 %    \begin{macrocode}
 \cs_new_protected:Npn \__kernel_backend_scope_begin:
   { \__kernel_backend_literal:n { x:gsave } }
