--- a/l3backend/l3backend-draw.dtx
+++ b/l3backend/l3backend-draw.dtx
@@ -581,7 +581,9 @@
 %   matrix into rotations and a scaling, then use those operations as they
 %   are handled by the backend. (There is backend support for matrix operations in
 %   \texttt{dvipdfmx}/\XeTeX{}, but as a matched pair so not suitable for the
-%   \enquote{stand alone} transformation set up here.)
+%   \enquote{stand alone} transformation set up here.) The specials used here
+%   are from \texttt{xdvipdfmx} originally: they are well-tested, but probably
+%   equivalent to the \texttt{pdf:} versions!
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_backend_cm:nnnn #1#2#3#4
   {
