--- a/l3backend/l3backend-pdf.dtx
+++ b/l3backend/l3backend-pdf.dtx
@@ -964,7 +964,7 @@
 %<*pdftex>
         { \tex_pdflastobj:D }
 %</pdftex>
-    \prop_gput:Nnn \exp_not:N \g_@@_backend_object_prop {#1} {#2}
+    \prop_gput:Nnn \g_@@_backend_object_prop {#1} {#2}
   }
 \cs_new:Npn \@@_backend_object_ref:n #1
   { \int_use:c { c_@@_backend_object_ \tl_to_str:n {#1} _int } ~ 0 ~ R }
