correct annotation last command (pdftex), correct space (luatex)

--- a/l3backend/l3backend-pdf.dtx
+++ b/l3backend/l3backend-pdf.dtx
@@ -779,10 +779,10 @@
   {
     \exp_not:N \int_value:w
 %<*luatex>
-      \exp_not:N \tex_pdffeedback:D lastannot
+      \exp_not:N \tex_pdffeedback:D lastannot ~
 %</luatex>
 %<*pdftex>
-      \exp_not:N \tex_pdfannot:D
+      \exp_not:N \tex_pdflastannot:D
 %</pdftex>
       \c_space_tl 0 ~ R
   }
@@ -831,7 +831,7 @@
   {
     \exp_not:N \int_value:w
 %<*luatex>
-      \exp_not:N \tex_pdffeedback:D lastlink
+      \exp_not:N \tex_pdffeedback:D lastlink ~
 %</luatex>
 %<*pdftex>
       \exp_not:N \tex_pdflastlink:D
