Define \c__kernel_expl_date_tl in the generic loader (fixes #800)

--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -1065,13 +1065,17 @@
 %   It seems to be common to have stray format files in the user tree
 %   which trigger errors due to mismatched versions (\emph{e.g.}
 %   \url{https://github.com/latex3/latex3/issues/781}).
+%
+%   This block also goes to the generic loader, as \pkg{expl3} isn't
+%   preloaded there, so the kernel date should be equal to the loader
+%   date.
 %    \begin{macrocode}
-%<*2ekernel>
+%<*2ekernel|generic>
 \unless\ifcsname\detokenize{c__kernel_expl_date_tl}\endcsname
   \global\expandafter\let\csname\detokenize
     {c__kernel_expl_date_tl}\endcsname\ExplFileDate
 \fi
-%</2ekernel>
+%</2ekernel|generic>
 %    \end{macrocode}
 % \end{macro}
 %
