--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -1071,10 +1071,16 @@
 %   date.
 %    \begin{macrocode}
 %<*2ekernel|generic>
-\unless\ifcsname\detokenize{c__kernel_expl_date_tl}\endcsname
-  \global\expandafter\let\csname\detokenize
-    {c__kernel_expl_date_tl}\endcsname\ExplFileDate
-\fi
+\begingroup
+  \catcode`\>=12
+  \def\aux#1>{}
+  \def\auxi{c__kernel_expl_date_tl}%
+  \edef\auxi{\expandafter\aux\meaning\auxi}%
+  \expandafter
+  \ifx\csname\auxi\endcsname\relax
+    \global\expandafter\let\csname\auxi\endcsname\ExplFileDate
+  \fi
+\endgroup
 %</2ekernel|generic>
 %    \end{macrocode}
 % \end{macro}
