--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -2958,7 +2958,7 @@
 %   don't have to ensure that the left-most token is an internal to not break
 %   in an |f|-type expansion. If \tn{expanded} isn't available, using a marker,
 %   we can see if what we are grabbing is exactly the marker, or there is
-%   anything else to deal with. Is there is, there is a loop. If not, tidy up
+%   anything else to deal with. If there is, there is a loop. If not, tidy up
 %   and leave the item in the output stream. More detail in
 %   \url{http://tex.stackexchange.com/a/70168}.
 %    \begin{macrocode}
