--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -3247,14 +3247,14 @@
 \prg_new_conditional:Npnn \tl_if_head_is_space:n #1 { p , T , F , TF }
   {
     \if:w
-        \if_false: { \fi: \__tl_if_head_is_space:w \prg_do_nothing: #1 ? ~ }
+        \if_false: { \fi: \@@_if_head_is_space:w \prg_do_nothing: #1 ? ~ }
         \scan_stop: \scan_stop:
       \prg_return_true:
     \else:
       \prg_return_false:
     \fi:
   }
-\cs_new:Npn \__tl_if_head_is_space:w #1 ~
+\cs_new:Npn \@@_if_head_is_space:w #1 ~
   {
     \tl_if_empty:oF {#1} { f }
     \exp_after:wN \use_none:n \exp_after:wN { \if_false: } \fi:
