Tighten up docs

--- a/l3experimental/l3color/l3color.dtx
+++ b/l3experimental/l3color/l3color.dtx
@@ -350,9 +350,10 @@
 % example those involving separations (see
 % \url{https://helpx.adobe.com/indesign/using/spot-process-colors.html}
 % for details of the use of separations in print). Color models may be split
-% into families; in the case of the basic \texttt{cmyk}, \texttt{gray}
-% and \texttt{rgb} models, the family and the model itself are synonymous. This
-% is not generally the case: see the PDF reference for more details. 
+% into families; for the standard device-based color models (\texttt{DeviceCMYK},
+% \texttt{DeviceRGB}, \texttt{DeviceGray}), these are synonymous. This
+% is not generally the case: see the PDF reference for more details. (Note that
+% \pkg{l3color} uses the shorter names \texttt{cmyk}, etc.)
 % 
 % \begin{function}{\color_model_new:nnn}
 %   \begin{syntax}
