Correct an internal variable name

--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -490,7 +490,7 @@
     \@@_backend_separation_init:nnnnn
       {#2}
       { \pdf_object_ref:n { @@_illuminant_cielab_ #1 } }
-      { \c_@@_model_range_lab_tl }
+      { \c_@@_model_range_cielab_tl }
       { 100 ~ 0 ~ 0 }
       { #3 ~ #4 ~ #5 }
   }
@@ -505,7 +505,7 @@
         <<
          /WhitePoint ~
            [ \tl_use:c { c_@@_model_whitepoint_cielab_ #1 _tl } ]
-         /Range ~ [ \c_@@_model_range_lab_tl ]
+         /Range ~ [ \c_@@_model_range_cielab_tl ]
         >>
      }
   }
