--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -494,8 +494,10 @@
       { 100 ~ 0 ~ 0 }
       { #3 ~ #4 ~ #5 }
   }
+%<*luatex|pdftex>
 \cs_if_exist:NF \pdf_object_now:nn
   { \cs_gset_protected:Npn \@@_backend_separation_init_CIELAB:nnnnn #1#2#3#4#5 { } }
+%</luatex|pdftex>
 \cs_new_protected:Npn \@@_backend_separation_init_CIELAB:n #1
   {
     \pdf_object_new:nn { @@_illuminant_CIELAB_ #1 } { array }
