Avoid expanding \AtBeginDvi

--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -340,7 +340,7 @@
     \bool_if:NT \g__kernel_backend_header_bool
       {
         \cs_if_exist:NTF \AtBeginDvi
-          { \AtBeginDvi }
+          { \exp_not:N \AtBeginDvi }
           { \use:n }
             {
               \exp_not:N \@@_backend_separation_init_aux:nnnnn
