--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -327,8 +327,7 @@
 %     \@@_backend_separation_init_/DeviceRGB:nnn
 %   }
 % \begin{macro}{\@@_backend_separation_init_Device:Nn}
-% \begin{macro}{\@@_backend_separation_init_CIELAB:nnnnn}
-% \begin{macro}{\@@_backend_separation_init_CIELAB:n}
+% \begin{macro}{\@@_backend_separation_init_CIELAB:nnn}
 %   Initialising here means creating a small header set up plus massaging
 %   some data. This comes about as we have to deal with PDF-focussed data,
 %   which makes most sense \enquote{higher-up}. The approach is based on
@@ -384,10 +383,8 @@
 %    \end{macrocode}
 %  Currently no CIELAB support.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_backend_separation_init_CIELAB:nnnnn #1#2#3#4#5 { }
-\cs_new_protected:Npn \@@_backend_separation_init_CIELAB:n #1 { }
+\cs_new_protected:Npn \@@_backend_separation_init_CIELAB:nnn #1#2#3 { }
 %    \end{macrocode}
-% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
@@ -409,15 +406,12 @@
 % \end{macro}
 %
 % \begin{macro}
-%   {\@@_backend_separation_init:nnnnn, \@@_backend_separation_init_CIELAB:nnnnn}
-% \begin{macro}{\@@_backend_separation_init_CIELAB:n}
+%   {\@@_backend_separation_init:nnnnn, \@@_backend_separation_init_CIELAB:nnn}
 %   No support at present.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_backend_separation_init:nnnnn #1#2#3#4#5 { }
-\cs_new_protected:Npn \@@_backend_separation_init_CIELAB:nnnnn #1#2#3#4#5 { }
-\cs_new_protected:Npn \@@_backend_separation_init_CIELAB:n #1 { }
+\cs_new_protected:Npn \@@_backend_separation_init_CIELAB:nnnnnn #1#2#3 { }
 %    \end{macrocode}
-% \end{macro}
 % \end{macro}
 %
 %    \begin{macrocode}
@@ -452,8 +446,7 @@
 %
 % \begin{macro}{\@@_backend_separation_init:nnnnn}
 % \begin{macro}{\@@_backend_separation_init:n}
-% \begin{macro}{\@@_backend_separation_init_CIELAB:nnnnn}
-% \begin{macro}{\@@_backend_separation_init_CIELAB:n}
+% \begin{macro}{\@@_backend_separation_init_CIELAB:nnn}
 %   Initialising the PDF structures needs two parts: creating an object
 %   containing the \enquote{real} name of the Separation, then adding a reference
 %   to that to each page. The latter uses the internal name of the \texttt{cs}.
@@ -506,34 +499,34 @@
 %   For CIELAB colors, we need one object per document for the illuminant,
 %   plus initialisation of the color space referencing that object.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_backend_separation_init_CIELAB:nnnnn #1#2#3#4#5
+\cs_new_protected:Npn \@@_backend_separation_init_CIELAB:nnn #1#2#3
   {
+    \pdf_object_if_exist:nF { @@_illuminant_CIELAB_ #1 }
+      {
+        \pdf_object_new:nn { @@_illuminant_CIELAB_ #1 } { array }
+        \pdf_object_write:nx { @@_illuminant_CIELAB_ #1 }
+          {
+            /Lab ~
+            <<
+             /WhitePoint ~
+               [ \tl_use:c { c_@@_model_whitepoint_CIELAB_ #1 _tl } ]
+             /Range ~ [ \c_@@_model_range_CIELAB_tl ]
+            >>
+          }
+      }
     \@@_backend_separation_init:nnnnn
       {#2}
       { \pdf_object_ref:n { @@_illuminant_CIELAB_ #1 } }
       { \c_@@_model_range_CIELAB_tl }
       { 100 ~ 0 ~ 0 }
-      { #3 ~ #4 ~ #5 }
+      {#3}
   }
 \cs_if_exist:NF \pdf_object_now:nn
-  { \cs_gset_protected:Npn \@@_backend_separation_init_CIELAB:nnnnn #1#2#3#4#5 { } }
-\cs_new_protected:Npn \@@_backend_separation_init_CIELAB:n #1
   {
-    \pdf_object_new:nn { @@_illuminant_CIELAB_ #1 } { array }
-    \pdf_object_write:nx { @@_illuminant_CIELAB_ #1 }
-      {
-        /Lab ~
-        <<
-         /WhitePoint ~
-           [ \tl_use:c { c_@@_model_whitepoint_CIELAB_ #1 _tl } ]
-         /Range ~ [ \c_@@_model_range_CIELAB_tl ]
-        >>
-     }
+    \cs_gset_protected:Npn \@@_backend_separation_init_CIELAB:nnn #1#2#3
+      { }
   }
-\cs_if_exist:NF \pdf_object_new:nn
-  { \cs_gset_protected:Npn \@@_backend_separation_init_CIELAB:n #1 { } }
 %    \end{macrocode}
-% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
