Enable CIELAB support with dvips

--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -318,6 +318,7 @@
 % \begin{macro}
 %   {
 %     \@@_backend_separation_init:nnnnn,
+%     \@@_backend_separation_init:nxxnn,
 %     \@@_backend_separation_init_aux:nnnnn
 %   }
 % \begin{macro}[EXP]
@@ -354,6 +355,7 @@
             }
       }
   }
+\cs_generate_variant:Nn \@@_backend_separation_init:nnnnn { nxx }
 \cs_new_protected:Npn \@@_backend_separation_init_aux:nnnnn #1#2#3#4#5
   {
     \__kernel_backend_literal:e
@@ -362,9 +364,9 @@
         TeXDict ~ begin ~
         /color \int_use:N \g_@@_separation_int
           {
-            [
+            [ ~
               /Separation ~ ( \str_convert_pdfname:n {#1} ) ~
-              #2 ~
+              [ ~ #2 ~ ] ~
                 {
                   \cs_if_exist_use:cF { @@_backend_separation_init_ #2 :nnn }
                     { \@@_backend_separation_init:nnn }
@@ -476,9 +478,56 @@
       { \@@_backend_separation_init:nw {#1} #4 \s_@@_stop }
   }
 %    \end{macrocode}
-%  Currently no CIELAB support.
+%  CIELAB support uses the detail from the PostScript reference, page 227;
+%  other than that block of PostScript, this is the same as for PDF-based
+%  routes.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_backend_separation_init_CIELAB:nnn #1#2#3 { }
+\cs_new_protected:Npn \@@_backend_separation_init_CIELAB:nnn #1#2#3
+  {
+    \@@_backend_separation_init:nxxnn
+      {#2}
+      {
+        /CIEBasedABC ~
+            << ~
+              /RangeABC ~ [ ~ \c_@@_model_range_CIELAB_tl \c_space_tl ] ~
+              /DecodeABC ~
+                [ ~
+                  { ~ 16 ~ add ~ 116 ~ div ~ } ~ bind ~
+                  { ~ 500 ~ div ~ } ~ bind ~
+                  { ~ 200 ~ div ~ } ~ bind ~
+                ] ~
+              /MatrixABC ~ [ ~ 1 ~ 1 ~ 1 ~ 1 ~ 0 ~ 0 ~ 0 ~ 0 ~ -1 ~ ] ~
+              /DecodeLMN ~
+                [ ~
+                  { ~
+                    dup ~ 6 ~ 29 ~ div ~ ge ~
+                      { ~ dup ~ dup ~ mul ~ mul ~ ~ } ~
+                      { ~ 4 ~ 29 ~ div ~ sub ~ 108 ~ 841 ~ div ~ mul ~ } ~
+                    ifelse ~
+                    0.9505 ~ mul ~
+                  } ~ bind ~
+                  { ~
+                    dup ~ 6 ~ 29 ~ div ~ ge ~
+                      { ~ dup ~ dup ~ mul ~ mul ~ } ~
+                      { ~ 4 ~ 29 ~ div ~ sub ~ 108 ~ 841 ~ div ~ mul ~ } ~
+                    ifelse ~
+                  } ~ bind ~
+                  { ~
+                    dup ~ 6 ~ 29 ~ div ~ ge ~
+                      { ~ dup ~ dup ~ mul ~ mul ~ } ~
+                      { ~ 4 ~ 29 ~ div ~ sub ~ 108 ~ 841 ~ div ~ mul ~ } ~
+                    ifelse ~
+                    1.0890 ~ mul ~
+                  } ~ bind
+                ] ~
+              /WhitePoint ~
+                [ ~ \tl_use:c { c_@@_model_whitepoint_CIELAB_ #1 _tl } ~ ] ~
+            >>
+      }
+      { \c_@@_model_range_CIELAB_tl }
+      { 100 ~ 0 ~ 0 }
+      {#3}
+  }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
