--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -737,12 +737,13 @@
 %   (not used by \LaTeX3).
 % \end{function}
 %
-% \begin{function}[updated = 2011-05-23, EXP,pTF]{\token_if_primitive:N}
+% \begin{function}[updated = 2020-09-11, EXP,pTF]{\token_if_primitive:N}
 %   \begin{syntax}
 %     \cs{token_if_primitive_p:N} \meta{token} \\
 %     \cs{token_if_primitive:NTF} \meta{token} \Arg{true code} \Arg{false code}
 %   \end{syntax}
-%   Tests if the \meta{token} is an engine primitive.
+%   Tests if the \meta{token} is an engine primitive. In \LuaTeX{}
+%   this includes primitive-like commands defined using |{token.set_lua}|.
 % \end{function}
 %
 % \section{Peeking ahead at the next token}
