--- a/l3backend/l3backend-color.dtx
+++ b/l3backend/l3backend-color.dtx
@@ -308,10 +308,11 @@
 %<*dvips>
 %    \end{macrocode}
 %
-% \begin{macro}{\@@_backend_select_separation:nn}
+% \begin{macro}{\@@_backend_select_separation:nn, \@@_backend_select_devicen:nn}
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_backend_select_separation:nn #1#2
   { \@@_backend_select:n { separation ~ #1 ~ #2 } }
+\cs_new_eq:NN \@@_backend_select_devicen:nn \@@_backend_select_separation:nn
 %    \end{macrocode}
 % \end{macro}
 %
@@ -362,7 +363,7 @@
       {
         !
         TeXDict ~ begin ~
-        /color \int_use:N \g_@@_separation_int
+        /color \int_use:N \g_@@_model_int
           {
             [ ~
               /Separation ~ ( \str_convert_pdfname:n {#1} ) ~
@@ -541,6 +542,30 @@
 % \end{macro}
 % \end{macro}
 %
+% \begin{macro}{\@@_backend_devicen_init:nnn}
+%   Trivial as almost all of the work occurs in the shared code.
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_backend_devicen_init:nnn #1#2#3
+  {
+    \__kernel_backend_literal:e
+      {
+        !
+        TeXDict ~ begin ~
+        /color \int_use:N \g_@@_model_int
+          {
+            [ ~
+              /DeviceN ~
+              [ ~ #1 ~ ] ~
+              #2 ~
+              { ~ #3 ~ } ~
+            ] ~ setcolorspace
+          } ~ def ~
+        end
+      }
+  }
+%    \end{macrocode}
+% \end{macro}
+%
 %    \begin{macrocode}
 %</dvips>
 %    \end{macrocode}
@@ -549,10 +574,11 @@
 %<*dvisvgm>
 %    \end{macrocode}
 %
-% \begin{macro}{\@@_backend_select_separation:nn}
+% \begin{macro}{\@@_backend_select_separation:nn, \@@_backend_select_devicen:nn}
 %   No support at present.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_backend_select_separation:nn #1#2 { }
+\cs_new_protected:Npn \@@_backend_select_devicen:nn #1#2 { }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -573,7 +599,7 @@
 %<*dvipdfmx|luatex|pdftex|xetex>
 %    \end{macrocode}
 %
-% \begin{macro}{\@@_backend_select_separation:nn}
+% \begin{macro}{\@@_backend_select_separation:nn, \@@_backend_select_devicen:nn}
 % \begin{macro}{\@@_backend_select:n}
 %   Different syntaxes here as the stacks are accessed very differently.
 %    \begin{macrocode}
@@ -591,6 +617,7 @@
     \group_insert_after:N \@@_backend_reset:
   }
 %</dvipdfmx|xetex>
+\cs_new_eq:NN \@@_backend_select_devicen:nn \@@_backend_select_separation:nn
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -617,7 +644,7 @@
       }
     \@@_backend_separation_init:n
       {
-        /Separation
+        /Separation ~
         / \str_convert_pdfname:n {#1} ~ #2 ~
         \pdf_object_last:
       }
@@ -626,7 +653,7 @@
       {
         \pdfcoredict_gput:nnn
           { Page / Resources / ColorSpace }
-          { color \int_use:N \g_@@_separation_int }
+          { color \int_use:N \g_@@_model_int }
           { \pdf_object_last: }
       }
 %</luatex|pdftex>
@@ -638,7 +665,7 @@
 %<*dvipdfmx|xetex>
     \__kernel_backend_literal:x
       {
-        pdf:obj ~ @color \int_use:N \g_@@_separation_int \c_space_tl
+        pdf:obj ~ @color \int_use:N \g_@@_model_int \c_space_tl
           [#1]
       }
 %</dvipdfmx|xetex>
@@ -677,6 +704,65 @@
     \cs_gset_protected:Npn \@@_backend_separation_init_CIELAB:nnn #1#2#3
       { }
   }
+%    \end{macrocode}
+% \end{macro}
+% \end{macro}
+% \end{macro}
+%
+% \begin{macro}{\@@_backend_devicen_init:nnn}
+% \begin{macro}[EXP]{\@@_backend_devicen_init:w}
+% \begin{macro}{\@@_backend_devicen_init:n}
+%   Similar to the Separations case, but with an arbitrary function for
+%   the alternative space work.
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_backend_devicen_init:nnn #1#2#3
+  {
+    \pdf_object_now:nx { stream }
+      {
+        {
+          /FunctionType ~ 4 ~
+          /Domain ~
+            [ ~
+              \prg_replicate:nn
+                { 0 \@@_backend_devicen_init:w #1 ~ \s_@@_stop }
+                { 0 ~ 1 ~ } ~
+            ] ~
+          /Range ~
+            [ ~
+              \str_case:nn {#2}
+                {
+                  { /DeviceCMYK } { 0 ~ 1 ~ 0 ~ 1 ~ 0 ~ 1 ~ 0 ~ 1 }
+                  { /DeviceGray } { 0 ~ 1 }
+                  { /DeviceRGB }  { 0 ~ 1 ~ 0 ~ 1 ~ 0 ~ 1 }
+                } ~
+            ]
+        }
+        {#3}
+     }
+    \@@_backend_separation_init:n
+      {
+        /DeviceN ~
+        [ ~ #1 ~ ] ~
+        #2 ~
+        \pdf_object_last:
+      }
+%<*luatex|pdftex>
+    \use:x
+      {
+        \pdfcoredict_gput:nnn
+          { Page / Resources / ColorSpace }
+          { color \int_use:N \g_@@_model_int }
+          { \pdf_object_last: }
+      }
+%</luatex|pdftex>
+  }
+\cs_new:Npn \@@_backend_devicen_init:w #1 ~ #2 \s_@@_stop
+  {
+    + 1
+    \tl_if_blank:nF {#2}
+      { \@@_backend_devicen_init:w #2 \s_@@_stop }
+  }
+\cs_new_eq:NN \@@_backend_devicen_init:n \@@_backend_separation_init:n
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
@@ -730,13 +816,17 @@
 % \begin{macro}
 %   {
 %     \@@_backend_fill_separation:nn,
-%     \@@_backend_stroke_separation:nn
+%     \@@_backend_stroke_separation:nn,
+%     \@@_backend_fill_devicen:nn,
+%     \@@_backend_stroke_devicen:nn
 %   }
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_backend_fill_separation:nn #1#2
   { \__kernel_backend_literal_pdf:n { /#1 ~ cs ~ #2 ~ scn } }
 \cs_new_protected:Npn \@@_backend_stroke_separation:nn #1#2
   { \__kernel_backend_literal_pdf:n { /#1 ~ CS ~ #2 ~ SCN } }
+\cs_new_eq:NN \@@_backend_fill_devicen:nn \@@_backend_fill_separation:nn
+\cs_new_eq:NN \@@_backend_stroke_devicen:nn \@@_backend_stroke_separation:nn
 %    \end{macrocode}
 % \end{macro}
 %
@@ -777,13 +867,17 @@
 % \begin{macro}
 %   {
 %     \@@_backend_fill_separation:nn,
-%     \@@_backend_stroke_separation:nn
+%     \@@_backend_stroke_separation:nn,
+%     \@@_backend_fill_devicen:nn,
+%     \@@_backend_stroke_devicen:nn
 %   }
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_backend_fill_separation:nn #1#2
   { \__kernel_backend_postscript:n { /color.fc { #1 } def } }
 \cs_new_protected:Npn \@@_backend_stroke_separation:nn #1#2
   { \__kernel_backend_postscript:n { /color.sc { #1 } def } }
+\cs_new_eq:NN \@@_backend_fill_devicen:nn \@@_backend_fill_separation:nn
+\cs_new_eq:NN \@@_backend_stroke_devicen:nn \@@_backend_stroke_separation:nn
 %    \end{macrocode}
 % \end{macro}
 %
@@ -892,14 +986,16 @@
 % \begin{macro}
 %   {
 %     \@@_backend_fill_separation:nn,
-%     \@@_backend_stroke_separation:nn
+%     \@@_backend_stroke_separation:nn,
+%     \@@_backend_fill_devicen:nn,
+%     \@@_backend_stroke_devicen:nn
 %   }
 %   At present, these are no-ops.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_backend_fill_separation:nn #1#2
-  { }
-\cs_new_protected:Npn \@@_backend_stroke_separation:nn #1#2
-  { }
+\cs_new_protected:Npn \@@_backend_fill_separation:nn #1#2 { }
+\cs_new_protected:Npn \@@_backend_stroke_separation:nn #1#2 { }
+\cs_new_eq:NN \@@_backend_fill_devicen:nn \@@_backend_fill_separation:nn
+\cs_new_eq:NN \@@_backend_stroke_devicen:nn \@@_backend_stroke_separation:nn
 %    \end{macrocode}
 % \end{macro}
 %
