Special-case "none" colorant

--- a/l3experimental/l3color/l3color.dtx
+++ b/l3experimental/l3color/l3color.dtx
@@ -1918,12 +1918,20 @@
                }
           }
           {
-            \__kernel_msg_error:nnn { color }
-              { DeviceN-no-alternative }
-              {#2}
+            \str_if_eq:nnF {##1} { none }
+              {
+                \__kernel_msg_error:nnn { color }
+                  { DeviceN-no-alternative }
+                  {#2}
+              }
           }
       }
-    \exp_args:NV \@@_model_devicen:nnn \l_@@_model_tl {#1} {#2}
+    \tl_if_empty:NTF \l_@@_model_tl
+      {
+        \__kernel_msg_error:nnn { color }
+          { DeviceN-no-alternative } {#2}
+      }
+      { \exp_args:NV \@@_model_devicen:nnn \l_@@_model_tl {#1} {#2} }
   }
 %    \end{macrocode}
 %   We now complete the data we require by first finding out how many
