--- a/l3kernel/l3debug.dtx
+++ b/l3kernel/l3debug.dtx
@@ -220,7 +220,7 @@
   }
 \cs_set_protected:Npn \debug_resume:
   {
-    \tl_set:Nx \l_@@_suspended_tl
+    \__kernel_tl_set:Nx \l_@@_suspended_tl
       { \tl_tail:N \l_@@_suspended_tl }
     \tl_if_empty:NT \l_@@_suspended_tl
       {
@@ -510,11 +510,11 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_generate_parameter_list:NNN #1#2#3
   {
-    \tl_set:Nx \l_@@_internal_tl
+    \__kernel_tl_set:Nx \l_@@_internal_tl
       { \exp_last_unbraced:Nf \use_ii:nnn \cs_split_function:N #1 }
-    \tl_set:Nx #2
+    \__kernel_tl_set:Nx #2
       { \exp_args:NV \@@_build_parm_text:n \l_@@_internal_tl }
-    \tl_set:Nx #3
+    \__kernel_tl_set:Nx #3
       { \exp_args:NV \@@_build_arg_list:n \l_@@_internal_tl }
   }
 \cs_new:Npn \@@_build_parm_text:n #1
@@ -739,6 +739,13 @@
     }
 %    \end{macrocode}
 % \end{macro}
+%
+% Set \cs{__kernel_tl_set:Nx} and \cs{__kernel_tl_gset:Nx} to the same as
+% \cs{tl_set:Nx}.
+%    \begin{macrocode}
+  \cs_gset_protected:Npn \__kernel_tl_set:Nx  { \tl_set:Nx }
+  \cs_gset_protected:Npn \__kernel_tl_gset:Nx { \tl_gset:Nx }
+%    \end{macrocode}
 %
 % Patching the second argument to ensure it exists. This happens before
 % we alter |#1| so the ordering is correct.  For many variable types
@@ -1053,7 +1060,7 @@
     {
       \@@_trace_push:nnN { regex } { 1 } \@@_escape_use:nnnn
       \group_begin:
-        \tl_set:Nx \l_@@_internal_a_tl
+        \__kernel_tl_set:Nx \l_@@_internal_a_tl
           { \@@_trace_pop:nnN { regex } { 1 } \@@_escape_use:nnnn }
         \use_none:nnn
     }
