--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -1027,13 +1027,13 @@
 %   hide in braces.
 %    \begin{macrocode}
 \cs_new_protected:Npn \str_replace_once:Nnn
-  { \@@_replace:NNNnn \prg_do_nothing: \tl_set:Nx  }
+  { \@@_replace:NNNnn \prg_do_nothing: \__kernel_tl_set:Nx  }
 \cs_new_protected:Npn \str_greplace_once:Nnn
-  { \@@_replace:NNNnn \prg_do_nothing: \tl_gset:Nx }
+  { \@@_replace:NNNnn \prg_do_nothing: \__kernel_tl_gset:Nx }
 \cs_new_protected:Npn \str_replace_all:Nnn
-  { \@@_replace:NNNnn \@@_replace_next:w \tl_set:Nx  }
+  { \@@_replace:NNNnn \@@_replace_next:w \__kernel_tl_set:Nx  }
 \cs_new_protected:Npn \str_greplace_all:Nnn
-  { \@@_replace:NNNnn \@@_replace_next:w \tl_gset:Nx }
+  { \@@_replace:NNNnn \@@_replace_next:w \__kernel_tl_gset:Nx }
 \cs_generate_variant:Nn \str_replace_once:Nnn  { c }
 \cs_generate_variant:Nn \str_greplace_once:Nnn { c }
 \cs_generate_variant:Nn \str_replace_all:Nnn   { c }
