--- a/l3kernel/l3sys.dtx
+++ b/l3kernel/l3sys.dtx
@@ -972,7 +972,7 @@ end
 \tl_new:N \g_@@_backend_tl
 \@@_finalise:n
   {
-    \tl_gset:Nx \g_@@_backend_tl
+    \__kernel_tl_gset:Nx \g_@@_backend_tl
       {
         \sys_if_engine_xetex:TF
           { xdvipdfmx }
