use __kernel_tl_(g)set:Nx instead of tl_(g)set:Nx where possible

--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -1502,7 +1502,7 @@
       \tl_put_right:Nn \l_@@_tmp_tl { ^^@ \if_false: } }
       \char_set_catcode_group_end:n { 0 }
       \tl_put_right:Nn \l_@@_tmp_tl { { \fi: \exp_not:N \or: ^^@ } % }
-      \tl_set:Nx \l_@@_tmp_tl { \l_@@_tmp_tl }
+      \__kernel_tl_set:Nx \l_@@_tmp_tl { \l_@@_tmp_tl }
       \char_set_catcode_math_toggle:n { 0 }
       \tl_put_right:Nn \l_@@_tmp_tl { \or: ^^@ }
       \char_set_catcode_alignment:n { 0 }
