--- a/l3kernel/l3deprecation.dtx
+++ b/l3kernel/l3deprecation.dtx
@@ -731,7 +731,7 @@
     \group_begin:
       \file_get:nnN {#3} {#2} \l_@@_internal_a_tl
       #2 \scan_stop:
-      \tl_set:Nx \l_@@_internal_a_tl { \l_@@_internal_a_tl }
+      \__kernel_tl_set:Nx \l_@@_internal_a_tl { \l_@@_internal_a_tl }
     \exp_args:NNNo \group_end:
     \tl_set:Nn #1 \l_@@_internal_a_tl
   }
@@ -742,7 +742,7 @@
     \group_begin:
       \file_get:nnN {#3} {#2} \l_@@_internal_a_tl
       #2 \scan_stop:
-      \tl_gset:Nx #1 { \l_@@_internal_a_tl }
+      \__kernel_tl_gset:Nx #1 { \l_@@_internal_a_tl }
     \group_end:
   }
 \cs_generate_variant:Nn \tl_gset_from_file_x:Nnn { c }
