--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -1074,7 +1074,7 @@
       { \@@_open_stream:Nn #1 {#2} }
       {
         \@@_new:N #1
-        \tl_set:Nx \l_@@_stream_tl { \int_eval:n {#1} }
+        \__kernel_tl_set:Nx \l_@@_stream_tl { \int_eval:n {#1} }
         \@@_open_stream:Nn #1 {#2}
       }
   }
@@ -1475,14 +1475,14 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \iow_open:Nn #1#2
   {
-    \tl_set:Nx \l_@@_file_name_tl
+    \__kernel_tl_set:Nx \l_@@_file_name_tl
       { \__kernel_file_name_sanitize:n {#2} }
     \iow_close:N #1
     \seq_gpop:NNTF \g_@@_streams_seq \l_@@_stream_tl
       { \@@_open_stream:NV #1 \l_@@_file_name_tl }
       {
         \@@_new:N #1
-        \tl_set:Nx \l_@@_stream_tl { \int_eval:n {#1} }
+        \__kernel_tl_set:Nx \l_@@_stream_tl { \int_eval:n {#1} }
         \@@_open_stream:NV #1 \l_@@_file_name_tl
       }
   }
@@ -1684,7 +1684,7 @@
 \cs_new:Npn \@@_unindent:w { }
 \cs_new_protected:Npn \@@_set_indent:n #1
   {
-    \tl_set:Nx \l_@@_one_indent_tl
+    \__kernel_tl_set:Nx \l_@@_one_indent_tl
       { \exp_args:No \__kernel_str_to_other_fast:n { \tl_to_str:n {#1} } }
     \int_set:Nn \l_@@_one_indent_int
       { \str_count:N \l_@@_one_indent_tl }
@@ -1861,7 +1861,7 @@
 %   \cs{iow_wrap:nnnN}.
 %    \begin{macrocode}
       \cs_set_eq:NN \protect \token_to_str:N
-      \tl_set:Nx \l_@@_wrap_tl {#1}
+      \__kernel_tl_set:Nx \l_@@_wrap_tl {#1}
       \cs_set_eq:NN \iow_allow_break: \@@_allow_break_error:
       \cs_set_eq:NN \iow_indent:n \@@_indent_error:n
 %    \end{macrocode}
@@ -1869,8 +1869,8 @@
 %   then convert to a string) and initialize the target count for lines
 %   (the first line has target count \cs{l_iow_line_count_int} instead).
 %    \begin{macrocode}
-      \tl_set:Nx \l_@@_newline_tl { \iow_newline: #2 }
-      \tl_set:Nx \l_@@_newline_tl { \tl_to_str:N \l_@@_newline_tl }
+      \__kernel_tl_set:Nx \l_@@_newline_tl { \iow_newline: #2 }
+      \__kernel_tl_set:Nx \l_@@_newline_tl { \tl_to_str:N \l_@@_newline_tl }
       \int_set:Nn \l_@@_line_target_int
         { \l_iow_line_count_int - \str_count:N \l_@@_newline_tl + 1 }
 %    \end{macrocode}
@@ -1910,12 +1910,12 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_wrap_do:
   {
-    \tl_set:Nx \l_@@_wrap_tl
+    \__kernel_tl_set:Nx \l_@@_wrap_tl
       {
         \exp_args:No \__kernel_str_to_other_fast:n \l_@@_wrap_tl
         \c_@@_wrap_end_marker_tl
       }
-    \tl_set:Nx \l_@@_wrap_tl
+    \__kernel_tl_set:Nx \l_@@_wrap_tl
       {
         \exp_after:wN \@@_wrap_fix_newline:w \l_@@_wrap_tl
           ^^J \q_@@_nil ^^J \s_@@_stop
@@ -2179,7 +2179,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_wrap_allow_break:n #1
   {
-    \tl_set:Nx \l_@@_line_tl
+    \__kernel_tl_set:Nx \l_@@_line_tl
       { \l_@@_line_tl \@@_wrap_trim:N \l_@@_line_part_tl }
     \bool_set_false:N \l_@@_line_break_bool
     \tl_if_empty:NTF \l_@@_line_part_tl
@@ -2210,7 +2210,7 @@
     \tl_put_right:Nx \l_@@_line_tl { \l_@@_line_part_tl }
     \bool_set_false:N \l_@@_line_break_bool
     \int_sub:Nn \l_@@_indent_int { \l_@@_one_indent_int }
-    \tl_set:Nx \l_@@_indent_tl
+    \__kernel_tl_set:Nx \l_@@_indent_tl
       { \exp_after:wN \@@_unindent:w \l_@@_indent_tl }
     \@@_wrap_chunk:nw {#1}
   }
@@ -2249,9 +2249,9 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_wrap_store_do:n #1
   {
-    \tl_set:Nx \l_@@_line_tl
+    \__kernel_tl_set:Nx \l_@@_line_tl
       { \l_@@_line_tl \l_@@_line_part_tl }
-    \tl_set:Nx \l_@@_wrap_tl
+    \__kernel_tl_set:Nx \l_@@_wrap_tl
       {
         \l_@@_wrap_tl
         \l_@@_newline_tl
@@ -2796,7 +2796,7 @@
 \cs_generate_variant:Nn \file_get_full_name:nN { V }
 \prg_new_protected_conditional:Npnn \file_get_full_name:nN #1#2 { T , F , TF }
   {
-    \tl_set:Nx #2
+    \__kernel_tl_set:Nx #2
       { \file_full_name:n {#1} }
     \tl_if_empty:NTF #2
       { \prg_return_false: }
@@ -2823,7 +2823,7 @@
   {
     \prg_set_protected_conditional:Npnn \file_get_full_name:nN #1#2 { T , F , TF }
       {
-        \tl_set:Nx \l_@@_base_name_tl
+        \__kernel_tl_set:Nx \l_@@_base_name_tl
           { \__kernel_file_name_sanitize:n {#1} }
         \@@_get_full_name_search:nN { } \use:n
         \seq_map_inline:Nn \l_file_search_path_seq
@@ -2858,7 +2858,7 @@
   }
 \cs_new_protected:Npn \@@_get_full_name_search:nN #1#2
   {
-    \tl_set:Nx \l_@@_full_name_tl
+    \__kernel_tl_set:Nx \l_@@_full_name_tl
       { \tl_to_str:n {#1} \l_@@_base_name_tl }
     \__kernel_ior_open:No \g_@@_internal_ior \l_@@_full_name_tl
     \ior_if_eof:NF \g_@@_internal_ior { #2 { \prg_break: } }
@@ -3040,7 +3040,7 @@
   { \@@_get_details:nnN {#1} { timestamp } #2 }
 \cs_new_protected:Npn \@@_get_details:nnN #1#2#3
   {
-    \tl_set:Nx #3
+    \__kernel_tl_set:Nx #3
       { \use:c { file_ #2 :n } {#1} }
     \tl_if_empty:NTF #3
       { \prg_return_false: }
@@ -3087,7 +3087,7 @@
 \prg_new_protected_conditional:Npnn \file_get_hex_dump:nnnN #1#2#3#4
   { T , F , TF }
   {
-    \tl_set:Nx #4
+    \__kernel_tl_set:Nx #4
       { \file_hex_dump:nnn {#1} {#2} {#3} }
     \tl_if_empty:NTF #4
       { \prg_return_false: }
