tweak tl_if_head_is_N_type:n

--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -3183,9 +3183,9 @@
 %   (begin-group token), the lines involving \cs{token_to_str:N} produce a
 %   single closing brace.  The category code test is thus true exactly
 %   in the fourth case, which is what we want.  One cannot optimize by
-%   moving one of the |\scan_stop:| to the beginning: if |#1| contains primitive
-%   conditionals, all of its occurrences must be dealt with before the
-%   \cs{if_catcode:w} tries to skip the \texttt{true} branch of the
+%   moving one of the \cs{scan_stop:} to the beginning: if |#1| contains
+%   primitive conditionals, all of its occurrences must be dealt with before
+%   the \cs{if:w} tries to skip the \texttt{true} branch of the
 %   conditional.
 %    \begin{macrocode}
 \prg_new_conditional:Npnn \tl_if_head_is_N_type:n #1 { p , T , F , TF }
@@ -3202,18 +3202,12 @@
 \cs_new:Npn \@@_if_head_is_N_type_auxi:w #1 ~
   {
     \tl_if_empty:oTF { #1 }
-      { \exp_after:wN \@@_if_head_is_N_type_auxii:nn }
-      { \exp_after:wN \@@_if_head_is_N_type_auxiii:n }
+      { f \exp_after:wN \use_none:nn }
+      { \exp_after:wN \@@_if_head_is_N_type_auxii:n }
     \exp_after:wN { \if_false: } \fi: 
   }
-\cs_new:Npn \@@_if_head_is_N_type_auxii:nn #1 #2
-  {
-    f
-  }
-\cs_new:Npn \@@_if_head_is_N_type_auxiii:n #1
-  {
-    \exp_after:wN \use_none:n \exp_after:wN 
-  }
+\cs_new:Npn \@@_if_head_is_N_type_auxii:n #1
+  { \exp_after:wN \use_none:n \exp_after:wN }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
