slightly faster tl_if_head_is_space:n

--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -3255,9 +3255,9 @@
       \prg_return_false:
     \fi:
   }
-\cs_new:Npn \@@_if_head_is_space:w #1 ~
+\exp_args:Nno \use:n { \cs_new:Npn \@@_if_head_is_space:w #1 ~ }
   {
-    \tl_if_empty:oF {#1} { f }
+    \@@_if_empty_if:o {#1} \else: f \fi:
     \exp_after:wN \use_none:n \exp_after:wN { \if_false: } \fi:
   }
 %    \end{macrocode}
